--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -26,6 +26,8 @@
           %h3{ translate: 'group_page.discussions' }
           %discussions{group: 'group'}
         .group-page-members
+          .context-menu.pull-right
+            %i.fa.fa-lg.fa-chevron-down
           %h3{ translate: 'group_page.members' }
           %members{group: 'group'}
         .group-page-subgroups
