--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -11,7 +11,7 @@ $light-grey: #F5F5F5;
 
 $thread-max-width: 640px;
 $sidebar-width: 320px;
-$container-min-width: 320px;
+$container-min-width: 200px;
 $container-max-width: $thread-max-width;
 $expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
 
@@ -70,6 +70,7 @@ $expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
   }
   .card-minor-action{
     margin: 10px 0 0 0;
+    clear: both;
   }
   .card-strip-margin{
     /* utility class to use when you want to fix up
@@ -78,6 +79,12 @@ $expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
     margin-bottom: -10px;
   }
 }
+.btn-icon{
+  text-align: left;
+}
+.btn-success.btn-icon i.fa{ color: #fff; }
+.btn-icon i.fa{ padding-right: 2px; }
+.btn.btn-icon{ padding: 6px 12px 6px 9px;}
 
 .avatar-initials{
   width: 30px;
@@ -91,7 +98,10 @@ $expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
   width: 30px;
   height: 30px;
 }
-
+.lg .avatar-image img, .lg .avatar-initials{
+  width: 50px;
+  height: 50px;
+}
 @import 'base';
 @import 'layout';
 @import 'thread';
