--- a/lineman/app/templates/members.haml
+++ b/lineman/app/templates/members.haml
@@ -1,15 +1,14 @@
-.members
-  .media.member{ng-repeat: 'member in group.members()'}
-    .media-left{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = member'}
-    .media-body {{ member.name }}
-  .members-show-more.show-more.card-minor-action
+.group-member-list
+  .group-member-list-item{ng-repeat: 'member in group.members()'}
+    .group-member-list-avatar.lg{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = member'}
+  .group-member-list-show-more.show-more.card-minor-action
     %a{href: '#', translate: 'common.action.show_more'}
   .members-invite{ng_controller: 'InvitationsController'}
     .row
       .col-xs-12.col-sm-6
         %a.btn.btn-success.btn-block.btn-icon{href: '#', ng_click: 'openForm()'}
           %i.fa.fa-lg.fa-plus>
-          %span{translate: 'group_page.invite_members' }
+          %span{translate: 'group_page.invite_people' }
 
 
 
