layout working properly now

--- a/lineman/app/css/group_page.scss
+++ b/lineman/app/css/group_page.scss
@@ -1,4 +1,6 @@
 .group-page-container{
+  max-width: $group-page-max-width;
+  margin: 0 auto;
   /* over-riding bootstrap */
   .media:first-child{
     margin-top: 10px;
