--- a/lineman/app/css/thread.scss
+++ b/lineman/app/css/thread.scss
@@ -1,7 +1,7 @@
 .thread-container {
   border: 1px solid $thread-border-color;
   max-width: $thread-max-width;
-  margin-top: 10px;
+  margin: 10px auto;
 }
 
 .thread-discussion {
