--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -1,35 +1,35 @@
-.container
-  .row
-    .col-xs-12
-      .group-page-container
-        .group-page-header
-          .group-page-cover
-          .group-page-logo
-          .group-page-buttons.pull-right
-            %a.btn.btn-icon.btn-default.btn-block{href: '#'}
-              %i.fa.fa-lg.fa-eye>
-              Notifications
-            %a.btn.btn-icon.btn-default.btn-block{href: '#'}
-              %i.fa.fa-lg.fa-cog>
-              Options
-          .group-page-name
-            %h1 {{group.name}}
-          .group-page-privacy
-            %i.fa.fa-lg.fa-lock>
-            Private
-        .group-page-description
-          .context-menu.pull-right
-            %i.fa.fa-lg.fa-chevron-down
-          %h3{ translate: 'group_page.description' }
-          .group-description.card-strip-margin{ btf-markdown: 'group.description' }
-        .group-page-threads
-          %h3{ translate: 'group_page.discussions' }
-          %discussions{group: 'group'}
-        .group-page-members
-          .context-menu.pull-right
-            %i.fa.fa-lg.fa-chevron-down
-          %h3{ translate: 'group_page.members' }
-          %members{group: 'group'}
-        .group-page-subgroups
-          %h3{ translate: 'group_page.subgroups' }
-          %subgroups{group: 'group'}
+/ .container
+/   .row
+/     .col-xs-12
+.group-page-container
+  .group-page-header
+    .group-page-cover
+    .group-page-logo
+    .group-page-buttons.pull-right
+      %a.btn.btn-icon.btn-default.btn-block{href: '#'}
+        %i.fa.fa-lg.fa-eye>
+        Notifications
+      %a.btn.btn-icon.btn-default.btn-block{href: '#'}
+        %i.fa.fa-lg.fa-cog>
+        Options
+    .group-page-name
+      %h1 {{group.name}}
+    .group-page-privacy
+      %i.fa.fa-lg.fa-lock>
+      Private
+  .group-page-description
+    .context-menu.pull-right
+      %i.fa.fa-lg.fa-chevron-down
+    %h3{ translate: 'group_page.description' }
+    .group-description.card-strip-margin{ btf-markdown: 'group.description' }
+  .group-page-threads
+    %h3{ translate: 'group_page.discussions' }
+    %discussions{group: 'group'}
+  .group-page-members
+    .context-menu.pull-right
+      %i.fa.fa-lg.fa-chevron-down
+    %h3{ translate: 'group_page.members' }
+    %members{group: 'group'}
+  .group-page-subgroups
+    %h3{ translate: 'group_page.subgroups' }
+    %subgroups{group: 'group'}
