--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -9,11 +9,12 @@ $loomio-orange: #F6A82B;
 /* let's come up with a good naming scheme for the greys once we lock them in*/
 $light-grey: #F5F5F5;
 
-$thread-max-width: 640px;
+$thread-max-width: 500px;
+$group-page-max-width: 640px;
 $sidebar-width: 320px;
 $container-min-width: 200px;
-$container-max-width: $thread-max-width;
-$expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;
+$container-max-width: 960px;
+/*$expanded-container-max-width: $thread-max-width + $sidebar-width + 10px;*/
 
 @mixin fontSmall {
   font-size: 12px;
