--- a/lineman/app/css/group_page.scss
+++ b/lineman/app/css/group_page.scss
@@ -12,7 +12,7 @@
   min-height: 100px + 75px + 8px + 10px;
 }
 .group-page-cover{
-  max-width: $container-max-width;
+  max-width: $group-page-max-width;
   height: 100px;
   background: url('http://placehold.it/640x100') no-repeat;
 }
