--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -8,29 +8,9 @@
   margin-bottom: 5px;
 }
 
-.proposal-card-body {
-  padding-left: 5px;
-  white-space: nowrap;
-}
-
-.proposal-closed {
-  padding: 3px;
-  margin: 0 5px;
-  background: #ccc;
-  border-radius: 5px;
-}
-
-.proposal-card-vote-icon {
-  width: 23px;
-  height: 23px;
-}
-
-.proposal-card-closing-at {
-  @include metaText;
-}
-
-.pie-chart {
-
+.proposal-card-collapsed h2{
+  font-size: 18px;
+  line-height: 20px;
 }
 
 .pie-chart-pie {
