--- a/lineman/app/templates/proposals.haml
+++ b/lineman/app/templates/proposals.haml
@@ -1,6 +1,8 @@
 .thread-proposals
   %div{ng_repeat: 'proposal in discussion.proposals()'}
     .active-proposal{ng-show: 'isSelectedProposal(proposal)'}
+      %h3.first Proposal
       %proposal_card{proposal: 'proposal'}
+      %h3 Previous proposals
     .inactive-proposal{ng-hide: 'isSelectedProposal(proposal)', ng_click: 'setSelectedProposal(proposal)'}
       %proposal_card_collapsed{proposal: 'proposal'}
