--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -7,12 +7,31 @@
   @include metaText;
   margin-bottom: 5px;
 }
-
+.proposal-card-collapsed{
+  a{
+    display: block;
+    color: $primary-text-color;
+    margin: 0 -15px;
+    padding: 15px;
+  }
+  a:hover{
+    background-color: $slight-grey;
+    text-decoration: none;
+  }
+}
 .proposal-card-collapsed h2{
   font-size: 18px;
   line-height: 20px;
 }
-
+.proposal-card-collapsed-outcome{
+  color: $meta-text-color;
+}
+.proposal-card-collapsed-expand{
+  clear: both;
+  margin-top: 1em;
+  @include metaText;
+  text-decoration: underline;
+}
 .pie-chart-pie {
   width: 120px;
   height: 120px;
