--- a/lineman/app/css/base.scss
+++ b/lineman/app/css/base.scss
@@ -9,13 +9,16 @@ h1 {
   @include fontGrande;
   padding: 0;
   margin: 0;
-  color: #333333;
+  color: $primary-text-color;
 }
 
 h2 {
   @include fontHelveticaLight;
   @include fontLarge;
   margin: 8px 0;
+}
+h2.first{
+  margin-top: 0;
 }
 
 h3, h4 {
