--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap_overrides';
 @import 'bootstrap';
 
+$primary-text-color: #333;
 $meta-text-color: #888;
 $thread-border-color: #ddd;
 $item-highlight-color: #FFFFE8;
@@ -8,6 +9,7 @@ $loomio-orange: #F6A82B;
 
 /* let's come up with a good naming scheme for the greys once we lock them in*/
 $light-grey: #F5F5F5;
+$slight-grey: #E0E0E0;
 
 $thread-max-width: 640px;
 $group-page-max-width: 640px;
@@ -104,6 +106,9 @@ $sidebar-width: 320px;
 .lg .avatar-image img, .lg .avatar-initials{
   width: 50px;
   height: 50px;
+}
+.timeago{
+  @include metaText;
 }
 @import 'base';
 @import 'layout';
