--- a/lineman/app/templates/proposal_card_collapsed.haml
+++ b/lineman/app/templates/proposal_card_collapsed.haml
@@ -1,13 +1,15 @@
 .proposal-card-collapsed{ng-show: 'proposal'}
-  .media
+  %a.media{href: "#"}
     %timeago.pull-right{timestamp: 'proposal.createdAt'}
+    .proposal-card-collapsed-expand.pull-right Expand
     %mini-proposal-pie-chart.media-left{proposal: 'proposal'}
     .proposal-card-collapsed-body.media-body
-      .proposal-card-title
-        %h2.proposal-card-name {{::proposal.name}}
-        %span.proposal-closed{ng_show: 'proposal.closedAt'}
+      .proposal-card-collapsed-title
+        %h2.first.proposal-card-name {{::proposal.name}}
+        / %span.proposal-closed{ng_show: 'proposal.closedAt'}
       / .proposal-card-vote{ng_show: 'currentUserHasVoted()'}
       /   .media-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{currentUserVote().position}}'}
       /   .proposal-card-vote-statement {{ currentUserVote().statement }}
-      .proposal-card-outcome{ng_show: 'proposal.outcome'}
+      .proposal-card-collapsed-outcome{ng_show: 'proposal.outcome'}
         Outcome: {{::proposal.outcome}}
+    .clearfix
