--- a/lineman/app/css/thread.scss
+++ b/lineman/app/css/thread.scss
@@ -24,8 +24,7 @@
 }
 .thread-events {
   padding: 15px;
-  background-color: #F5F5F5;
-  border-top: 1px solid $thread-border-color;
+  background-color: #fff;
 }
 
 .thread-event {
