--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -17,7 +17,7 @@
     %navbar
 
     / only load this if the sidebar is open
-    %sidebar#sidebar
+    %sidebar#sidebar.hidden-xs
       %inbox
     .sidebar-spacer
       .container#main
