--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -11,7 +11,7 @@
   position: fixed;
 }
 .sidebar-is-open .sidebar-spacer{
-  margin-left: $sidebar-width;
+  @media (min-width: $screen-md-min){ margin-left: $sidebar-width; }
 }
 .sidebar-is-open .container#main{
   @media (min-width: $screen-sm-min){ max-width: $container-sm - $sidebar-width; }
