--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -15,7 +15,7 @@
     padding: 15px;
   }
   a:hover{
-    background-color: $slight-grey;
+    background-color: $list-hover-color;
     text-decoration: none;
   }
 }
