--- a/lineman/app/css/group_page.scss
+++ b/lineman/app/css/group_page.scss
@@ -25,9 +25,12 @@
   background: url('http://placehold.it/100x100');
   border: 4px solid #fff;
 }
-.group-page-name, .group-page-privacy{
-  margin-left: 128px;
+.group-page-privacy{
   margin-top: 10px;
+}
+.group-page-name-and-privacy{
+  margin: 10px 0;
+  @media (min-width: $screen-xs-max) { margin-left: 128px; }
 }
 .group-page-buttons{
   margin-top: 10px;
@@ -49,10 +52,13 @@
   margin: 0 10px 10px 0;
 }
 
+.group-thread-list{
+  border-top: 1px solid $thread-border-color;
+}
 .group-thread-list-item{
   border-bottom: 1px solid $thread-border-color;
   min-height: 48px;
-  padding: 4px 0;
+  padding: 8px 0;
 }
 .group-thread-list-group-name, .group-thread-list-time{
   @include metaText;
