--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -5,11 +5,11 @@ $primary-text-color: #333;
 $meta-text-color: #888;
 $thread-border-color: #ddd;
 $item-highlight-color: #FFFFE8;
+$list-hover-color: #E0E0E0;
 $loomio-orange: #F6A82B;
 
 /* let's come up with a good naming scheme for the greys once we lock them in*/
 $light-grey: #F5F5F5;
-$slight-grey: #E0E0E0;
 
 $thread-max-width: 640px;
 $group-page-max-width: 640px;
