--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -14,14 +14,31 @@
         .group-page-name-and-privacy
           .group-page-name
             %h1 {{group.name}}
-          .group-page-privacy
-            %i.fa.fa-lg.fa-lock>
-            Private
+          .group-page-privacy{dropdown: '', on-toggle: 'toggled(open)'}
+            %a.dropdown-toggle{href: '#'}
+              %i.fa.fa-lg.fa-lock>
+              %span Private
+            .dropdown-menu.with-labels{role: 'menu'}
+              %h3.dropdown-heading Visibility
+              %ul.dropdown-menu-items
+                %li.dropdown-menu-item
+                  .dropdown-menu-item-label
+                    %i.fa.fa-lg.fa-lock>
+                    %span> Private
+                    %i.fa.fa-lg.fa-check
+                  .dropdown-menu-item-details
+                    This group is only visible to members.
+                %li.dropdown-menu-item.last
+                  .dropdown-menu-item-label
+                    %i.fa.fa-lg.fa-globe>
+                    %span> Public
+                  .dropdown-menu-item-details
+                    This group is visible on the web.
       .group-page-description
         .context-menu.pull-right
           %i.fa.fa-lg.fa-chevron-down
         %h3.first{ translate: 'group_page.description' }
-        .group-description.card-strip-margin{ btf-markdown: 'group.description' }
+        .group-description.last{ btf-markdown: 'group.description' }
       .group-page-threads
         %h3.first{ translate: 'group_page.discussions' }
         %discussions{group: 'group'}
