tweaks to vote form

--- a/lineman/app/css/vote_form.scss
+++ b/lineman/app/css/vote_form.scss
@@ -1,7 +1,12 @@
 .vote-form {
 
 }
-
+.vote-form-label{
+  font-weight: bold;
+}
+.vote-form-details{
+  font-weight: normal;
+}
 .position-buttons {
   margin-bottom: 5px;
 }
