--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -22,5 +22,5 @@
         %a.loomio-nav-btn{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-bell
       %li.pull-right
-        %a.loomio-nav-btn{href: '#'}
+        %a.loomio-nav-btn{href: '#', ng_click: 'openDiscussionForm()'}
           %i.fa.fa-lg.fa-fw.fa-plus
