--- a/lineman/app/templates/discussions.haml
+++ b/lineman/app/templates/discussions.haml
@@ -6,14 +6,13 @@
         %i.fa.fa-lg.fa-comments
 
     .group-thread-list-thread-title {{ discussion.title }}
-    /should be discussion.group.name but not sure how to make it go
-    .group-thread-list-group-name {{ group.name }}
+    .group-thread-list-group-name {{ discussion.groupName() }}
 
   .discussions-show-more.card-minor-action
     %a{ng-hide: 'lastPage', ng-click: 'getNextPage()', href: '#', translate: 'common.action.show_more'}
   .discussions-new-thread
     .row
       .col-xs-12.col-sm-6
-        %a.btn.btn-success.btn-block.btn-icon{ href: '#' }
+        %a.btn.btn-success.btn-block.btn-icon{href: '#', ng_click: 'openForm()'}
           %i.fa.fa-lg.fa-plus>
-          %a{href: '#', ng_click: 'openForm()', translate: 'common.action.new_thread' }
+          %span{translate: 'common.action.new_thread' }
