Move privacy into directive, add notification directive

--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -14,10 +14,10 @@
             ·
             %span.discussion-privacy__is-private{ng-show: 'discussion.private'}>
               %i.fa.fa-lock>
-              %span{translate: 'common.state.private'}
+              %span{translate: 'common.privacy.private'}
             %span.discussion-privacy__is-public{ng-show: '!discussion.private'}>
               %i.fa.fa-globe>
-              %span{translate: 'common.state.public'}
+              %span{translate: 'common.privacy.public'}
 
         .thread-discussion-context
           .thread-discussion-description{btf-markdown: 'discussion.description' }
