--- a/lineman/app/templates/subgroups.haml
+++ b/lineman/app/templates/subgroups.haml
@@ -8,6 +8,6 @@
       .subgroup-list-item-description {{ subgroup.description }}
 
   .subgroups-invite.card-minor-action
-    %a{href: '#'}
+    %a{href: '#', ng_click: ''}
       %span>+
       %span{ translate: 'common.action.add_subgroup' }
